tests/purs/warning/NewtypeInstance3.out
Error found:
at tests/purs/warning/NewtypeInstance3.purs:21:1 - 21:86 (line 21, column 1 - line 21, column 86)

  The derived newtype instance for
  [33m                               [0m
  [33m  Main.MonadWriter w           [0m
  [33m                   (MyWriter w)[0m
  [33m                               [0m
  does not include a derived superclass instance for [33mMain.MonadTell[0m.


See https://github.com/purescript/documentation/blob/master/errors/MissingNewtypeSuperclassInstance.md for more information,
or to contribute content related to this error.

